Created and added btn, handler on btn and enter key

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <div>
       <input type="text">
     </div>
+    <form>
+      <button type="button" id="btnAdd">
+        Add
+      </button>
+    </form>
   </main>
 </body>
 <script src="index.js"></script>
