Created numbered task list

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         Add
       </button>
     </form>
+    <div>
+      <ol id="taskList">
+      </ol>
+    </div>
   </main>
 </body>
 <script src="index.js"></script>
