Added function addTask

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <button type="button" id="btnAdd">
         Add
       </button>
+      <button type="button" id="btnDelete">
+        Delete
+      </button>
     </form>
     <div>
       <ol id="taskList">
